--- a/style.css
+++ b/style.css
@@ -57,3 +57,15 @@ img {
   text-align: center;
 }
 
+.fa {
+  padding: 3px;
+  font-size: 25px;
+  width: 25px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
