--- a/style.css
+++ b/style.css
@@ -59,13 +59,14 @@ img {
 
 .fa {
   padding: 3px;
-  font-size: 25px;
-  width: 25px;
+  font-size: 30px;
+  width: 30px;
   text-align: center;
   text-decoration: none;
+  color: blue;
 }
 
 .fa:hover {
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
