covid banner js, other covid changes WIP

--- a/style.css
+++ b/style.css
@@ -70,3 +70,58 @@ img {
   opacity: 0.5;
 }
 
+/*covid banner*/
+
+.dismissible {
+  color: #33;
+  font-size: 16px;
+  line-height: 22px;
+  position: relative;
+  overflow: hidden;
+}
+
+ .dismissible span {
+  background: #fff;
+  border: 2px solid rgba(0, 0, 0, .3);
+  border-radius: 5px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .2);
+  box-sizing: border-box;
+  display: block;
+  margin: 0 auto 20px auto;
+  padding: 10px;
+  position: relative;
+
+ }
+
+.dismissible button {
+  background: rgba(0, 0, 0, .4);
+  border: 0;
+  border-radius: 100%;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: bold;
+  height: 24px;
+  line-height: 20px;
+  margin-top: -12px;
+  right: 10px;
+  position: absolute;
+  top: 50%;
+  width: 24px;
+}
+
+.dismissible button:focus {
+  outline: none;
+}
+
+/*.dismissible-info span {
+  background-color: #64B5F6;
+  border-color: #2196F3;
+  color: #fff;
+}
+
+.dismissible-info button {
+  background-color: #2196F3;
+  color: #E3F2FD;
+}*/
+
