--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ img {
 
 /*covid banner*/
 
-.dismissible {
+.dismissible-banner {
   color: #33;
   font-size: 16px;
   line-height: 22px;
@@ -80,7 +80,7 @@ img {
   overflow: hidden;
 }
 
- .dismissible span {
+ .dismissible-banner span {
   background: #fff;
   border: 2px solid rgba(0, 0, 0, .3);
   border-radius: 5px;
@@ -95,7 +95,7 @@ img {
   color: black;
  }
 
-.dismissible button {
+.dismissible-banner button {
   background: rgba(0, 0, 0, .4);
   border: 0;
   border-radius: 100%;
@@ -115,7 +115,7 @@ img {
   opacity: 0.65;
 }
 
-.dismissible button:focus {
+.dismissible-banner button:focus {
   outline: none;
 }
 
